--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
     <script src="preloader.js"></script>
   </head>
   <body>
-    <div id="container">
+    <div class="container">
       <!-- *** ESTRUCTURA SEMÁNTICA *** -->
       <!-- Header (encabezado de la página, zona superior) -->
       <header>
         <!-- nav (el navegador de toda la web) -->
-        <nav>
-          <a href="" class="link1">link1</a>
-          <a href="" class="link2">link2</a>
-          <a href="" class="link3">link3</a>
-          <a href="" class="link4">link4</a>
-        </nav>
+        <img src="" alt="logo de herrero">
+        <section class="herrero">
+          <figure class="herrero__content">
+            <picture class="herrero__content--img"><img src="/img/smartphone/OIG1.5kU7noswgilFA1aH6jj0.avif" alt="Imagen de la herrero"></picture>
+            <figcaption class="herrero__content--nombre">
+              <h2>Nombre del creador</h2>
+            </figcaption>
+            <p class="herrero__content--info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem praesentium quaerat quisquam temporibus sequi adipisci illo fugiat, commodi beatae minima laboriosam assumenda veritatis harum molestias earum impedit quas nesciunt. Dicta maiores, quasi asperiores ipsum deserunt exercitationem a quidem doloremque vitae, assumenda, labore culpa sit facere minima recusandae veritatis? Quas, eligendi?</p>
+          </figure>
+        </section>
       </header>
       <!-- Main (centro de la página, zona central) -->
       <main>
@@ -61,7 +65,7 @@
       </main>
       <!-- Footer (final de la página, zona inferior) -->
       <footer>
-        <h6>&copy;Copyright</h6>
+
       </footer>
     </div>
 
